--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,11 +31,13 @@
 .main:after {
   content: "";
   background-image: url("/assets/images/preview.jpg");
+  background-size: 100% 100%; /* Set background size to cover the entire page */
   z-index: 1;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: fixed; /* Use fixed position to cover the entire page */
   top: 0;
+  left: 0; /* Set left to 0 to cover the entire page */
+  width: 100%; /* Set width to 100% to cover the entire page */
+  height: 100%; /* Set height to 100% to cover the entire page */
   opacity: 0.4;
   filter: invert(1);
 }
